# SocketProgramming

Http_Client/: CMakeLists.txt  ClientManager.cpp  ClientManager.h  Parser.cpp  Parser.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  commands_input_file.txt  my_client.cpp  my_client.h
Http_Server/: CMakeLists.txt  Parser.cpp  Parser.h  Reciever.cpp  Reciever.h  ServerManager.cpp  ServerManager.h  main  my_Server.cpp  my_Server.h
